Fix rendering issue in Thunderbird that made newsletter unreadable

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,3 +1,9 @@
+// Prevent Thunderbird from applying floats to tables
+.row,
+.spacer {
+  float: none;
+}
+
 .body-text {
   margin-bottom: 30px;
   Margin-bottom: 30px;
